gcc/testsuite/gcc.dg/noncompile/920616-2.c
/* { dg-require-effective-target gcc_frontend } */
void f(void a,...){}		/* { dg-error "has incomplete type" } */
